content/_generated-doc/3.6/config/quarkus-datasource.adoc

:summaryTableId: quarkus-datasource
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-datasource_configuration]]link:#quarkus-datasource_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.health.enabled]]`link:#quarkus-datasource_quarkus.datasource.health.enabled[quarkus.datasource.health.enabled]`


[.description]
--
Whether or not a health check is published in case the smallrye-health extension is present.

This is a global setting and is not specific to a datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_HEALTH_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_HEALTH_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.metrics.enabled]]`link:#quarkus-datasource_quarkus.datasource.metrics.enabled[quarkus.datasource.metrics.enabled]`


[.description]
--
Whether or not datasource metrics are published in case a metrics extension is present.

This is a global setting and is not specific to a datasource.

NOTE: This is different from the "jdbc.enable-metrics" property that needs to be set on the JDBC datasource level to enable collection of metrics for that datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


h|[[quarkus-datasource_quarkus.datasource.data-sources-datasources]]link:#quarkus-datasource_quarkus.datasource.data-sources-datasources[Datasources]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.db-kind]]`link:#quarkus-datasource_quarkus.datasource.db-kind[quarkus.datasource.db-kind]`

`link:#quarkus-datasource_quarkus.datasource.db-kind[quarkus.datasource."datasource-name".db-kind]`


[.description]
--
The kind of database we will connect to (e.g. h2, postgresql...).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DB_KIND+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DB_KIND+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.db-version]]`link:#quarkus-datasource_quarkus.datasource.db-version[quarkus.datasource.db-version]`

`link:#quarkus-datasource_quarkus.datasource.db-version[quarkus.datasource."datasource-name".db-version]`


[.description]
--
The version of the database we will connect to (e.g. '10.0').

CAUTION: The version number set here should follow the same numbering scheme
as the string returned by `java.sql.DatabaseMetaData#getDatabaseProductVersion()`
for your database's JDBC driver.
This numbering scheme may be different from the most popular one for your database;
for example Microsoft SQL Server 2016 would be version `13`.

As a rule, the version set here should be as high as possible,
but must be lower than or equal to the version of any database your application will connect to.

A high version will allow better performance and using more features
(e.g. Hibernate ORM may generate more efficient SQL,
avoid workarounds and take advantage of more database features),
but if it is higher than the version of the database you want to connect to,
it may lead to runtime exceptions
(e.g. Hibernate ORM may generate invalid SQL that your database will reject).

Some extensions (like the Hibernate ORM extension)
will try to check this version against the actual database version on startup,
leading to a startup failure when the actual version is lower
or simply a warning in case the database cannot be reached.

The default for this property is specific to each extension;
the Hibernate ORM extension will default to the oldest version it supports.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DB_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DB_VERSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.devservices.enabled]]`link:#quarkus-datasource_quarkus.datasource.devservices.enabled[quarkus.datasource.devservices.enabled]`

`link:#quarkus-datasource_quarkus.datasource.devservices.enabled[quarkus.datasource."datasource-name".devservices.enabled]`


[.description]
--
If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default unless an existing configuration is present. When DevServices is enabled, Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.devservices.image-name]]`link:#quarkus-datasource_quarkus.datasource.devservices.image-name[quarkus.datasource.devservices.image-name]`

`link:#quarkus-datasource_quarkus.datasource.devservices.image-name[quarkus.datasource."datasource-name".devservices.image-name]`


[.description]
--
The container image name for container-based DevServices providers. This has no effect if the provider is not a container-based database, such as H2 or Derby.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.devservices.container-env-container-env]]`link:#quarkus-datasource_quarkus.datasource.devservices.container-env-container-env[quarkus.datasource.devservices.container-env]`

`link:#quarkus-datasource_quarkus.datasource.devservices.container-env-container-env[quarkus.datasource."datasource-name".devservices.container-env]`


[.description]
--
Environment variables that are passed to the container.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_CONTAINER_ENV+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_CONTAINER_ENV+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.devservices.container-properties-container-properties]]`link:#quarkus-datasource_quarkus.datasource.devservices.container-properties-container-properties[quarkus.datasource.devservices.container-properties]`

`link:#quarkus-datasource_quarkus.datasource.devservices.container-properties-container-properties[quarkus.datasource."datasource-name".devservices.container-properties]`


[.description]
--
Generic properties that are passed for additional container configuration.

Properties defined here are database-specific and are interpreted specifically in each database dev service implementation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_CONTAINER_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_CONTAINER_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.devservices.properties-properties]]`link:#quarkus-datasource_quarkus.datasource.devservices.properties-properties[quarkus.datasource.devservices.properties]`

`link:#quarkus-datasource_quarkus.datasource.devservices.properties-properties[quarkus.datasource."datasource-name".devservices.properties]`


[.description]
--
Generic properties that are added to the database connection URL.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.devservices.port]]`link:#quarkus-datasource_quarkus.datasource.devservices.port[quarkus.datasource.devservices.port]`

`link:#quarkus-datasource_quarkus.datasource.devservices.port[quarkus.datasource."datasource-name".devservices.port]`


[.description]
--
Optional fixed port the dev service will listen to.

If not defined, the port will be chosen randomly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.devservices.command]]`link:#quarkus-datasource_quarkus.datasource.devservices.command[quarkus.datasource.devservices.command]`

`link:#quarkus-datasource_quarkus.datasource.devservices.command[quarkus.datasource."datasource-name".devservices.command]`


[.description]
--
The container start command to use for container-based DevServices providers. This has no effect if the provider is not a container-based database, such as H2 or Derby.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_COMMAND+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_COMMAND+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.devservices.db-name]]`link:#quarkus-datasource_quarkus.datasource.devservices.db-name[quarkus.datasource.devservices.db-name]`

`link:#quarkus-datasource_quarkus.datasource.devservices.db-name[quarkus.datasource."datasource-name".devservices.db-name]`


[.description]
--
The database name to use if this Dev Service supports overriding it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_DB_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_DB_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.devservices.username]]`link:#quarkus-datasource_quarkus.datasource.devservices.username[quarkus.datasource.devservices.username]`

`link:#quarkus-datasource_quarkus.datasource.devservices.username[quarkus.datasource."datasource-name".devservices.username]`


[.description]
--
The username to use if this Dev Service supports overriding it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.devservices.password]]`link:#quarkus-datasource_quarkus.datasource.devservices.password[quarkus.datasource.devservices.password]`

`link:#quarkus-datasource_quarkus.datasource.devservices.password[quarkus.datasource."datasource-name".devservices.password]`


[.description]
--
The password to use if this Dev Service supports overriding it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.devservices.init-script-path]]`link:#quarkus-datasource_quarkus.datasource.devservices.init-script-path[quarkus.datasource.devservices.init-script-path]`

`link:#quarkus-datasource_quarkus.datasource.devservices.init-script-path[quarkus.datasource."datasource-name".devservices.init-script-path]`


[.description]
--
The path to a SQL script to be loaded from the classpath and applied to the Dev Service database. This has no effect if the provider is not a container-based database, such as H2 or Derby.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_INIT_SCRIPT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_INIT_SCRIPT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.devservices.volumes-volumes]]`link:#quarkus-datasource_quarkus.datasource.devservices.volumes-volumes[quarkus.datasource.devservices.volumes]`

`link:#quarkus-datasource_quarkus.datasource.devservices.volumes-volumes[quarkus.datasource."datasource-name".devservices.volumes]`


[.description]
--
The volumes to be mapped to the container. The map key corresponds to the host location; the map value is the container location. If the host location starts with "classpath:", the mapping loads the resource from the classpath with read-only permission. When using a file system location, the volume will be generated with read-write permission, potentially leading to data loss or modification in your file system. This has no effect if the provider is not a container-based database, such as H2 or Derby.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_VOLUMES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_VOLUMES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource_quarkus.datasource.health-exclude]]`link:#quarkus-datasource_quarkus.datasource.health-exclude[quarkus.datasource.health-exclude]`

`link:#quarkus-datasource_quarkus.datasource.health-exclude[quarkus.datasource."datasource-name".health-exclude]`


[.description]
--
Whether this particular data source should be excluded from the health check if the general health check for data sources is enabled.

By default, the health check includes all configured data sources (if it is enabled).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_HEALTH_EXCLUDE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_HEALTH_EXCLUDE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-datasource_quarkus.datasource.username]]`link:#quarkus-datasource_quarkus.datasource.username[quarkus.datasource.username]`

`link:#quarkus-datasource_quarkus.datasource.username[quarkus.datasource."datasource-name".username]`


[.description]
--
The datasource username

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-datasource_quarkus.datasource.password]]`link:#quarkus-datasource_quarkus.datasource.password[quarkus.datasource.password]`

`link:#quarkus-datasource_quarkus.datasource.password[quarkus.datasource."datasource-name".password]`


[.description]
--
The datasource password

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-datasource_quarkus.datasource.credentials-provider]]`link:#quarkus-datasource_quarkus.datasource.credentials-provider[quarkus.datasource.credentials-provider]`

`link:#quarkus-datasource_quarkus.datasource.credentials-provider[quarkus.datasource."datasource-name".credentials-provider]`


[.description]
--
The credentials provider name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_CREDENTIALS_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_CREDENTIALS_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-datasource_quarkus.datasource.credentials-provider-name]]`link:#quarkus-datasource_quarkus.datasource.credentials-provider-name[quarkus.datasource.credentials-provider-name]`

`link:#quarkus-datasource_quarkus.datasource.credentials-provider-name[quarkus.datasource."datasource-name".credentials-provider-name]`


[.description]
--
The credentials provider bean name.

This is a bean name (as in `@Named`) of a bean that implements `CredentialsProvider`. It is used to select the credentials provider bean when multiple exist. This is unnecessary when there is only one credentials provider available.

For Vault, the credentials provider bean name is `vault-credentials-provider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_CREDENTIALS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_CREDENTIALS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===